fix: JDK17 compat - replace List.getFirst() with get(0) in Issue4501Test
Introduced by cherry-pick of 41614bc27649e439e6fdd8fbf361876d6e302dfd
(fix: Bucket with id '1044' was not found). List.getFirst() is a
JDK21+ API; the java17 branch targets Java 17.